@@ -3,27 +3,33 @@ package udp
 import (
 	"github.com/elastic/beats/filebeat/channel"
 	"github.com/elastic/beats/filebeat/harvester"
-	"github.com/elastic/beats/filebeat/prospector"
+	"github.com/elastic/beats/filebeat/input"
 	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/beats/libbeat/common/cfgwarn"
 	"github.com/elastic/beats/libbeat/logp"
 )
 
 func init() {
-	err := prospector.Register("udp", NewProspector)
+	err := input.Register("udp", NewInput)
 	if err != nil {
 		panic(err)
 	}
 }
 
-type Prospector struct {
+// Input define a udp input
+type Input struct {
 	harvester *Harvester
 	started   bool
 	outlet    channel.Outleter
 }
 
-func NewProspector(cfg *common.Config, outlet channel.Factory, context prospector.Context) (prospector.Prospectorer, error) {
-	cfgwarn.Experimental("UDP prospector type is used")
+// NewInput creates a new udp input
+func NewInput(
+	cfg *common.Config,
+	outlet channel.Factory,
+	context input.Context,
+) (input.Input, error) {
+	cfgwarn.Experimental("UDP input type is used")
 
 	out, err := outlet(cfg, context.DynamicFields)
 	if err != nil {
@@ -31,16 +37,17 @@ func NewProspector(cfg *common.Config, outlet channel.Factory, context prospecto
 	}
 
 	forwarder := harvester.NewForwarder(out)
-	return &Prospector{
+	return &Input{
 		outlet:    out,
 		harvester: NewHarvester(forwarder, cfg),
 		started:   false,
 	}, nil
 }
 
-func (p *Prospector) Run() {
+// Run starts and execute the UDP server.
+func (p *Input) Run() {
 	if !p.started {
-		logp.Info("Starting udp prospector")
+		logp.Info("Starting udp input")
 		p.started = true
 		go func() {
 			defer p.outlet.Close()
@@ -52,11 +59,13 @@ func (p *Prospector) Run() {
 	}
 }
 
-func (p *Prospector) Stop() {
-	logp.Info("Stopping udp prospector")
+// Stop stops the UDP input
+func (p *Input) Stop() {
+	logp.Info("stopping UDP input")
 	p.harvester.Stop()
 }
 
-func (p *Prospector) Wait() {
+// Wait suspends the UDP input
+func (p *Input) Wait() {
 	p.Stop()
 }
