@@ -39,3 +39,4 @@ class Test(BaseTest):
 
         assert len(output) == 2
         assert output[0]["prospector.type"] == "udp"
+        assert output[0]["input.type"] == "udp"
